<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.ChartActivity">

        <ImageButton
            android:id="@+id/chart_btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:padding="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/chart_tvHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/stirng_hint"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/chart_btnBack"
            app:layout_constraintTop_toBottomOf="@+id/chart_btnBack" />

        <TextView
            android:id="@+id/chart_tvHintBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:text="@string/stirng_buyhint"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/chart_tvBuy" />

        <TextView
            android:id="@+id/chart_tvBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:textColor="@color/color_buy"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/chart_tvHintBuy"
            app:layout_constraintTop_toBottomOf="@+id/chart_tvHint"
            tools:text="899,999원" />

        <TextView
            android:id="@+id/chart_tvNotBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:textColor="@color/color_notBuy"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chart_tvHintBuy"
            tools:text="99,999원" />

        <TextView
            android:id="@+id/chart_tvHintNotBuy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:text="@string/stirng_notbuyhint"
            app:layout_constraintStart_toEndOf="@+id/chart_tvNotBuy"
            app:layout_constraintTop_toTopOf="@+id/chart_tvNotBuy" />

        <TextView
            android:id="@+id/chart_tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            tools:text="총 800,000원을\n사용했어요!"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>