<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="product"
            type="kr.hs.dgsw.jaehyeon.model.entity.Product" />

        <variable
            name="activity"
            type="kr.hs.dgsw.jaehyeon.view.activity.DetailActivity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.activity.DetailActivity">

        <ImageButton
            android:id="@+id/detail_btnBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@android:color/transparent"
            android:onClick="@{() -> activity.finish()}"
            android:padding="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/detail_tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@{product.name}"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_btnBack"
            tools:text="아이폰 14" />

        <TextView
            android:id="@+id/detail_tvPrice"
            setMoneyComma="@{product.price}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_tvName" />

        <TextView
            android:id="@+id/detail_tvNow"
            setItemPriceBackground="@{product.state}"
            setItemPriceText="@{product}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:background="@drawable/background_think"
            android:gravity="center"
            android:padding="16dp"
            android:text="고민중"
            android:textColor="@color/color_think"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/detail_btnBack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/detail_btnBack" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_notBuy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:background="@drawable/background_notbuy"
                android:onClick="@{()->activity.changeState(2)}"
                android:padding="8dp"
                android:text="@string/string_notbuy"
                android:textColor="@color/color_notBuy"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_think"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/background_think"
                android:onClick="@{()->activity.changeState(0)}"
                android:padding="8dp"
                android:text="@string/string_think"
                android:textColor="@color/color_think"
                android:textSize="14sp"
                android:textStyle="bold" />

            <View
                android:id="@+id/view2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:background="@drawable/background_buy"
                android:onClick="@{()->activity.changeState(1)}"
                android:padding="8dp"
                android:text="@string/string_buy"
                android:textColor="@color/color_buy"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/detail_linkHint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/string_link"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/detail_reason"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:text="@{product.reason}"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@+id/detail_linkHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_tvPrice" />

        <TextView
            android:id="@+id/detail_link"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:onClick="@{() -> activity.moveToLink()}"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            android:text="@{product.link}"
            android:textColor="@color/color_link"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/detail_linkHint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/detail_linkHint"
            app:layout_constraintTop_toTopOf="@+id/detail_linkHint"
            tools:text="sdafsadfasdfsadfsadfasdfsdfasdfsfasdfasd" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>